--- a/xxxwei-service.yml
+++ b/xxxwei-service.yml
@@ -1,2 +1,11 @@
 server:
   port: ${PORT:8088}
+  
+zipkin:
+    base-url: http://localhost:9411
+    
+zuul:
+  routes:
+    users:
+      path: /**
+      sensitiveHeaders: Cookie,Set-Cookie,Authorization
